bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:6: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
    case _ => if (a+b=10) {
                   ^